--- a/individual.html
+++ b/individual.html
@@ -5,31 +5,16 @@
   <title>Индивидуальный курс</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f5f5f5;
-    }
-    label, input, button {
-      display: block;
-      margin: 10px 0;
-      width: 100%;
-      max-width: 400px;
-    }
-    .status {
-      margin-top: 20px;
-      font-weight: bold;
-    }
+    body { font-family: Arial; padding: 20px; background: #f5f5f5; }
+    label, input, select, button { display: block; margin: 10px 0; max-width: 400px; width: 100%; }
+    .status { margin-top: 20px; font-weight: bold; }
   </style>
 </head>
 <body>
   <h1>Запись на индивидуальный курс</h1>
 
-  <label for="date">Дата:</label>
-  <input type="date" id="date">
-
-  <label for="time">Время:</label>
-  <input type="time" id="time">
+  <label for="slot">Выберите дату и время:</label>
+  <select id="slot"></select>
 
   <label for="fio">ФИО:</label>
   <input type="text" id="fio" placeholder="Введите ваше имя">
@@ -38,28 +23,38 @@
   <input type="tel" id="phone" placeholder="+7 (___) ___-__-__">
 
   <button onclick="submitForm()">Оплатить</button>
-
   <div class="status" id="status"></div>
 
   <script>
     const tg = window.Telegram.WebApp;
     const user_id = tg.initDataUnsafe?.user?.id || 'unknown';
 
+    async function loadSlots() {
+      const res = await fetch('https://your-backend.com/free_slots');
+      const slots = await res.json();
+      const slotSelect = document.getElementById('slot');
+      slots.forEach(slot => {
+        const option = document.createElement('option');
+        option.value = JSON.stringify(slot);
+        option.textContent = `${slot.дата} в ${slot.время}`;
+        slotSelect.appendChild(option);
+      });
+    }
+
     async function submitForm() {
       const fio = document.getElementById('fio').value;
       const phone = document.getElementById('phone').value;
-      const date = document.getElementById('date').value;
-      const time = document.getElementById('time').value;
+      const slot = JSON.parse(document.getElementById('slot').value);
 
-      const response = await fetch('/submit', {
+      const response = await fetch('https://your-backend.com/submit', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
           тип: 'индивидульный курс',
-          фио,
+          фио: fio,
           телефон: phone,
-          дата: date,
-          время: time,
+          дата: slot.дата,
+          время: slot.время,
           оплата: "оплачено",
           сертефикат: "нет",
           tg_id: user_id
@@ -68,10 +63,11 @@
 
       const result = await response.text();
       document.getElementById('status').textContent = result;
-      tg.close(); // закрыть WebApp после отправки
+      tg.close();
     }
 
-    tg.ready(); // говорим Telegram, что всё загружено
+    tg.ready();
+    loadSlots();
   </script>
 </body>
 </html>
