--- a/individual.html
+++ b/individual.html
@@ -41,7 +41,7 @@
   <h1>Запись на индивидуальный курс</h1>
 
   <label for="fio">ФИО:</label>
-  <input type="text" id="fio" placeholder="Введите ваше имя" required>
+  <input type="text" id="fio" placeholder="Введите ваше имя тест" required>
 
   <label for="phone">Телефон:</label>
   <input type="tel" id="phone" placeholder="+7 (___) ___-__-__" required>
