event_id name fix

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         let tg = window.Telegram.WebApp;
         // Получаем название мероприятия из URL
         const urlParams = new URLSearchParams(window.location.search);
-        const event_id = urlParams.get('event_name');
+        const event_id = urlParams.get('event_id');
     
         let fBtn = document.getElementsByClassName("f-btn")[0]
         let sBtn = document.getElementsByClassName("s-btn")[0]
