--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     }
 
     body {
-        font-family: "Times New Roman", serif;
-        background: #ffffff;
-        color: #000000;
+        font-family: "Arial", sans-serif;
+        background: #f4f4f4; /* светлый серый фон */
+        color: #2c2c2c; /* тёмно-серый текст */
         padding: 30px;
     }
 
@@ -23,17 +23,18 @@
         max-width: 700px;
         margin: auto;
         padding: 40px;
-        border: 1px solid #ccc;
-        box-shadow: 0 0 10px rgba(0,0,0,0.05);
-        text-align: center;
+        border: 1px solid #d0d0d0;
         background-color: #ffffff;
+        text-align: center;
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
     }
 
     h1 {
-        font-size: 24px;
+        font-size: 22px;
         margin-top: 20px;
         margin-bottom: 30px;
-        text-transform: uppercase;
+        color: #2a2a2a;
+        font-weight: normal;
     }
 
     img {
@@ -43,16 +44,17 @@
 
     .btn {
         border: none;
-        border-radius: 3px;
+        border-radius: 4px;
         margin-top: 40px;
         height: 50px;
         width: 200px;
         font-size: 16px;
         font-weight: bold;
         cursor: pointer;
+        background: #4f6d8c; /* тёмно-синий/серо-синий */
         color: #ffffff;
-        background-color: #333333;
         text-transform: uppercase;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
 
     form {
@@ -62,28 +64,29 @@
         max-width: 700px;
         margin: auto;
         padding: 40px;
-        border: 1px solid #ccc;
-        background: #fff;
-        box-shadow: 0 0 10px rgba(0,0,0,0.05);
+        border: 1px solid #d0d0d0;
+        background: #fdfdfd;
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
     }
 
     input {
         width: 100%;
         display: block;
         outline: none;
-        border-radius: 3px;
-        border: 1px solid #999;
+        border-radius: 4px;
+        border: 1px solid #b0b0b0;
         padding: 12px;
         margin: 15px 0;
-        background: #f8f8f8;
-        color: #000;
-        font-size: 16px;
+        background: #f7f9fb; /* светлый серо-голубой фон */
+        color: #1f1f1f;
+        font-size: 15px;
         transition: border-color 0.2s;
     }
 
     input:focus {
-        border-color: #666;
+        border-color: #4f6d8c;
     }
+
     </style>
 </head>
 <body>
