--- a/index.html
+++ b/index.html
@@ -5,87 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тестовое приложение</title>
     <style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    body {
-        font-family: "Arial", sans-serif;
-        background: #f4f4f4; /* светлый серый фон */
-        color: #2c2c2c; /* тёмно-серый текст */
-        padding: 30px;
-    }
+body {
+    font-family: "Arial", sans-serif;
+    background: #fdfaf7; /* тёплый почти белый фон */
+    color: #5e2b1f; /* глубокий коричневый для текста */
+    padding: 30px;
+}
 
-    .Main {
-        width: 100%;
-        max-width: 700px;
-        margin: auto;
-        padding: 40px;
-        border: 1px solid #d0d0d0;
-        background-color: #ffffff;
-        text-align: center;
-        box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
-    }
+.Main {
+    width: 100%;
+    max-width: 700px;
+    margin: auto;
+    padding: 40px;
+    border: 1px solid #b19784;
+    background-color: #fffdf8;
+    text-align: center;
+    box-shadow: 0 0 8px rgba(94, 43, 31, 0.05);
+}
 
-    h1 {
-        font-size: 22px;
-        margin-top: 20px;
-        margin-bottom: 30px;
-        color: #2a2a2a;
-        font-weight: normal;
-    }
+h1 {
+    font-size: 22px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    color: #5e2b1f;
+    font-weight: normal;
+}
 
-    img {
-        width: 70px;
-        margin: 30px auto;
-    }
+img {
+    width: 70px;
+    margin: 30px auto;
+}
 
-    .btn {
-        border: none;
-        border-radius: 4px;
-        margin-top: 40px;
-        height: 50px;
-        width: 200px;
-        font-size: 16px;
-        font-weight: bold;
-        cursor: pointer;
-        background: #4f6d8c; /* тёмно-синий/серо-синий */
-        color: #ffffff;
-        text-transform: uppercase;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
+.btn {
+    border: none;
+    border-radius: 4px;
+    margin-top: 40px;
+    height: 50px;
+    width: 200px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    background: #5e2b1f; /* насыщенный коричневый */
+    color: #fff8f0;
+    text-transform: uppercase;
+    box-shadow: 0 2px 4px rgba(94, 43, 31, 0.2);
+}
 
-    form {
-        display: none;
-        text-align: left;
-        width: 100%;
-        max-width: 700px;
-        margin: auto;
-        padding: 40px;
-        border: 1px solid #d0d0d0;
-        background: #fdfdfd;
-        box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
-    }
+form {
+    display: none;
+    text-align: left;
+    width: 100%;
+    max-width: 700px;
+    margin: auto;
+    padding: 40px;
+    border: 1px solid #b19784;
+    background: #fffdf8;
+    box-shadow: 0 0 8px rgba(94, 43, 31, 0.05);
+}
 
-    input {
-        width: 100%;
-        display: block;
-        outline: none;
-        border-radius: 4px;
-        border: 1px solid #b0b0b0;
-        padding: 12px;
-        margin: 15px 0;
-        background: #f7f9fb; /* светлый серо-голубой фон */
-        color: #1f1f1f;
-        font-size: 15px;
-        transition: border-color 0.2s;
-    }
+input {
+    width: 100%;
+    display: block;
+    outline: none;
+    border-radius: 4px;
+    border: 1px solid #b19784;
+    padding: 12px;
+    margin: 15px 0;
+    background: #fffaf0; /* светлый фон поля */
+    color: #5e2b1f;
+    font-size: 15px;
+    transition: border-color 0.2s;
+}
 
-    input:focus {
-        border-color: #4f6d8c;
-    }
+input:focus {
+    border-color: #5e2b1f;
+}
+
+
 
     </style>
 </head>
