--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тестовое приложение</title>
+    <title>Лобзик</title>
     <style>
 * {
     margin: 0;
@@ -93,9 +93,9 @@ input:focus {
 </head>
 <body>
     <div class="Main">
-        <h1>Тестовое приложение</h1>
+        <h1>Лобзик</h1>
         <p></p>
-        <button class="btn f-btn">Тест отправки данных</button>
+        <button class="btn f-btn">Зарегестрироваться</button>
     </div>
     <form class="test-form">    
         <input type="text" placeholder="Введите ФИО" class="full-name-inp">
