--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     img.logo {
       width: 280px;
       margin-bottom: 20px;
+      margin-left: -5px; /* Сдвиг логотипа на 5 пикселей влево */
     }
 
     .btn {
