--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
       color: #7a5541;
     }
 
-    .people-inp,
-    .certificate_amount {
+    .people-inp {
       width: calc(100% - 4px);
       margin: 0 2px;
       -webkit-appearance: none;
@@ -151,13 +150,11 @@
       transition: background 0.3s ease;
     }
 
-    .people-inp:hover,
-    .certificate_amount:hover {
+    .people-inp:hover {
       background: #9e8471;
     }
 
-    .people-inp::-webkit-slider-thumb,
-    .certificate_amount::-webkit-slider-thumb {
+    .people-inp::-webkit-slider-thumb {
       -webkit-appearance: none;
       appearance: none;
       width: 32px;
@@ -175,14 +172,12 @@
       transform-origin: center;
     }
 
-    .people-inp::-webkit-slider-thumb:hover,
-    .certificate_amount::-webkit-slider-thumb:hover {
+    .people-inp::-webkit-slider-thumb:hover {
       transform: translateY(-50%) scale(1.5);
       background: #f5f5f5;
     }
 
-    .people-inp::-webkit-slider-runnable-track,
-    .certificate_amount::-webkit-slider-runnable-track {
+    .people-inp::-webkit-slider-runnable-track {
       width: 100%;
       height: 8px;
       cursor: pointer;
@@ -190,8 +185,7 @@
       border-radius: 25px;
     }
 
-    .people-inp::-moz-range-thumb,
-    .certificate_amount::-moz-range-thumb {
+    .people-inp::-moz-range-thumb {
       width: 32px;
       height: 32px;
       border-radius: 50%;
@@ -202,30 +196,74 @@
       transition: transform 0.2s ease, background 0.3s ease;
     }
 
-    .people-inp::-moz-range-track,
-    .certificate_amount::-moz-range-track {
+    .people-inp::-moz-range-track {
       background: #b19784;
       border-radius: 25px;
       height: 8px;
       transition: background 0.3s ease;
     }
 
-    .people-inp:hover::-moz-range-track,
-    .certificate_amount:hover::-moz-range-track {
+    .people-inp:hover::-moz-range-track {
       background: #9e8471;
     }
 
-    .people-inp::-moz-range-thumb:hover,
-    .certificate_amount::-moz-range-thumb:hover {
+    .people-inp::-moz-range-thumb:hover {
       transform: scale(1.5);
       background: #f5f5f5;
     }
 
-    .people-value,
-    .certificate-am-value {
+    .people-value {
       font-weight: bold;
       color: #5e2b1f;
       margin-left: 5px;
+    }
+
+    .certificate-input-group {
+      display: flex;
+      width: 100%;
+      gap: 8px;
+    }
+
+    .certificate-am-container input[type="number"] {
+      flex: 1;
+      padding: 14px;
+      border: 1px solid #b19784;
+      border-radius: 6px;
+      background: #fffaf0;
+      color: #5e2b1f;
+      font-size: 18px;
+      text-align: center;
+      font-weight: bold;
+      min-width: 0;
+    }
+
+    .certificate-am-container input[type="number"]:focus {
+      border-color: #5e2b1f;
+      outline: none;
+    }
+
+    .certificate-ctrl-btn {
+      width: 60px;
+      padding: 0;
+      border: none;
+      border-radius: 6px;
+      background: #6e3a27;
+      color: white;
+      font-size: 24px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.2s ease;
+    }
+
+    .certificate-ctrl-btn:hover {
+      background: #5e2b1f;
+      transform: scale(1.02);
+    }
+
+    .certificate-ctrl-btn:active {
+      transform: scale(0.98);
     }
 
     .s-btn {
@@ -267,8 +305,18 @@
     </div>
     
     <div class="certificate-am-container">
-      <label>Номинал сертификата: <span class="certificate-am-value">1 000 ₽</span></label>
-      <input type="range" min="1000" max="10000" step="1000" value="1000" class="certificate_amount">
+      <label>Номинал сертификата (рубли):</label>
+      <div class="certificate-input-group">
+        <button type="button" class="certificate-ctrl-btn certificate-dec">-</button>
+        <input type="number" 
+              min="1000" 
+              step="1000" 
+              value="1000" 
+              class="certificate_amount"
+              placeholder="Сумма">
+        <button type="button" class="certificate-ctrl-btn certificate-inc">+</button>
+      </div>
+      <div class="error-message" id="cert-error">Сумма должна быть кратна 1000</div>
     </div>
     
     <button class="btn s-btn">Отправить</button>
@@ -289,18 +337,38 @@
     const peopleValue = document.querySelector('.people-value');
     const certAmContainer = document.querySelector('.certificate-am-container');
     const certAmInput = document.querySelector('.certificate_amount');
-    const certAmValue = document.querySelector('.certificate-am-value');
+    const certError = document.getElementById('cert-error');
+    const certIncBtn = document.querySelector('.certificate-inc');
+    const certDecBtn = document.querySelector('.certificate-dec');
+
+    certIncBtn.addEventListener('click', () => {
+      certAmInput.stepUp();
+      validateCertInput();
+    });
+
+    certDecBtn.addEventListener('click', () => {
+      if(Number(certAmInput.value) > 1000) {
+        certAmInput.stepDown();
+      }
+      validateCertInput();
+    });
+
+    function validateCertInput() {
+      const value = Number(certAmInput.value);
+      if(value % 1000 !== 0 || value < 1000) {
+        certAmInput.classList.add('error');
+        certError.style.display = 'block';
+        return false;
+      }
+      certAmInput.classList.remove('error');
+      certError.style.display = 'none';
+      return true;
+    }
 
     if(max_numberOfPeople && max_numberOfPeople !== 'None' && peopleInput) {
       peopleInput.max = max_numberOfPeople;
       peopleInput.addEventListener('input', function() {
         peopleValue.textContent = this.value;
-      });
-    }
-
-    if(certAmInput) {
-      certAmInput.addEventListener('input', function() {
-        certAmValue.textContent = `${Number(this.value).toLocaleString()} ₽`;
       });
     }
 
@@ -320,6 +388,7 @@
         form.querySelector('.event').style.display = 'none';
         peopleContainer.style.display = 'none';
         certAmContainer.style.display = 'block';
+        certAmInput.value = 1000;
       }
       else {
         form.querySelector('.event').style.display = 'block';
@@ -361,6 +430,10 @@
       if (!inputs.email.value.match(emailRegex)) {
         inputs.email.classList.add('error');
         document.getElementById('email-error').style.display = 'block';
+        isValid = false;
+      }
+
+      if(event_type === 'certificate_am' && !validateCertInput()) {
         isValid = false;
       }
 
