--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
   <form class="test-form">
     <h1 class="event">Пожалуйста укажите свои данные</h1>
-    <h1 class="certificate">Пожалуйста укажите данные получателя сертификата (получатель - человек, которому собираетесь подарить сертификат)</h1>
+    <h1 class="certificate">Пожалуйста укажите ФИО получателя сертификата (получатель - человек, которому собираетесь подарить сертификат) и свои контактные данные (email, номер телефона)</h1>
     
     <div class="input-group">
       <input type="text" placeholder="Введите ФИО" class="full-name-inp" required>
